# LiteRL

./: .gitignore  README.md  inference.py  orchestrate.py  pyproject.toml  requirements.txt  test_vllm_api.py  train.py
configs/: config.yaml  infra.yaml  model.yaml  task.yaml  wandb.yaml
core/: __init__.py  sampler.py  trainer.py  training_utils.py  vllm_server.py
tasks/: __init__.py
tasks/math/: __init__.py  dataset.py  reward.py  rollout.py
